# ideas-swarm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-dangerous-git.sh
.claude/skills/: CF_AGENTS_SUITE.md
.github/: CODEOWNERS  pull_request_template.md
agent/: README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
agent/frontend/: App.tsx  styles.css
agent/migrations/: 0001_initial_schema.sql
agent/public/: index.html
agent/src/: deepseek.ts  evaluator.ts  ideator-agent.ts  index.ts  paper-selector.ts  papers.ts  prompt.ts  schema.ts
agent/test/: evaluator.test.ts  index.test.ts  paper-selector.test.ts  prompt.test.ts  schema.test.ts
cybersec-papers/: fetch.py
cybersec-papers/2026-04-17_to_2026-04-30/: enriched.jsonl  index_authors.json  index_baselines.json  index_dimensions.json  index_domains.json  index_tags.json  manifest.jsonl  papers.md  ranked.md  stats.json  vocab_dimensions.csv  vocab_tags.csv  vocab_units.csv
docs/: CONCEPT.md  ROADMAP.md  TEAM.md  index.html  insights.html  neo4j-sync.md
docs/adr/: ADR-001-citation-model-and-paper-concept-linkage.md
docs/architecture/: agentic-ideation-system.md  paper-analysis-schema.json
docs/research/: SKILL_CATALOG.md  cf-agents-core.md  (+6 more)
kb/: CHANGELOG.md  INDEX.md  LOG.md  SCHEMA.md
scripts/: analyze_papers.py  build_graph.py  build_indexes.py  finish_analysis.py  report.py  smoke_minimax.py  sync_graph_to_neo4j.py
tests/: test_neo4j_sync.py
(+1261 files in other folders)
