[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ideator"
version = "0.1.0"
description = "Agentic LLM workflow for combinatorial business ideation — KB tooling (Python). Agent runtime is TypeScript on Cloudflare Workers; see ./agent/."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ai-ideator" }]

# Python deps cover KB ingestion, lint, and ideation pre/post-processing only.
# The Cloudflare Agents SDK runtime lives in ./agent/ (TypeScript) and is managed
# separately via npm + wrangler — not pip.
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyright>=1.1",
]
kb = [
    # Tooling for KB ingestion / hashing / linting
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/ai_ideator --cov-report=term-missing"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_ideator"]
